--- a/AngularForAdapter/AngularAndApi/src/app/app.component.css
+++ b/AngularForAdapter/AngularAndApi/src/app/app.component.css
@@ -31,7 +31,7 @@ button {
     margin: 0 20px 20px 20px;
     width: 100px !important;
     padding: 5px;
-    background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
+    background-image: linear-gradient(200deg, #25aae1, #16eb28);
     box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
     -moz-transition: all .4s ease-in-out;
     -o-transition: all .4s ease-in-out;
@@ -46,7 +46,7 @@ button:hover {
     -o-transition: all .4s ease-in-out;
     -webkit-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
-
+    background-image: linear-gradient(60deg, #25aae1, #16eb28);
 }
 
 .formInput {
